# cpp-lectures

./: README.md
2023/bonus-track/example/3/: CMakeLists.txt  link_boost.ipynb
2023/lecture1/: lecture1.pptx
2023/lecture4/: lecture4.pptx
2023/lecture5/: object_oriented_programming.ipynb
2023/lecture8/: ranges.md
2024/fast_course/: plan.ipynb
bonus-track/: cmake_vscode.pptx
doc/: modules.ipynb
lecture1/: hello.cpp  lecture1.pptx  robot.txt
lecture1/src/: robot  robot.cpp  test  type_data.cpp  upr_simbols.cpp
lecture2/: lecture2.pptx
lecture2/scripts/: for_demo.sh  if_else_demo.sh  task_if_else.sh
lecture2/src/: for_demo.cpp  if_else_demo.cpp  task_if_else.cpp  while_demo.cpp
lecture3/: lecture3.pptx
lecture3/scripts/: array_syntax.sh
lecture3/src/: array_syntax.cpp  overload_functions.cpp  practice.cpp  practice2.cpp
lecture4/: lecture4.pptx  ~$lecture4.pptx
lecture4/scripts/: inventory_game.sh  reference.sh
lecture4/src/: a.out  example.cpp  inventory_game.cpp  pointer.cpp  pointer.sh  practice.cpp  practice.sh  reference.sh  test  test.cpp
lecture5/: lecture5.pptx
lecture5/only_reading/: example1.cpp
lecture5/scripts/: c_destructor.sh  polymorphism.sh
lecture5/src/: encapsulation.cpp  example.cpp  headers_rule.cpp  practice.cpp  structures.cpp
lecture6/: lecture6.pptx
lecture6/scripts/: overload_template.sh  practice.sh
lecture6/src/: overload_template.cpp  practice.cpp
lecture7/: lecture7.pptx
lecture7/src/: example2.cpp  input_file.cpp  overload_operator.cpp  read_file.cpp
lecture8/: lecture8.pptx
(+67 files in other folders)
